package Util;

import com.example.gugu_client.R;

public class ImageManager {

    public static final int[] imagesAvatar = {
            R.drawable.avasterdr,
            R.drawable.avasterwe,
            R.drawable.avasterdandelion,
            R.drawable.avasteryellow,
            R.drawable.avastertree,
            R.drawable.avasterdoor,
            R.drawable.avastertony
    };

    public static final int[] imagesBackground = {
            R.drawable.bgdr,
            R.drawable.bgcloud,
            R.drawable.bgbamboo,
            R.drawable.bgsunraise,
            R.drawable.bgsnow
    };

    public static final int[] imageID = {
            R.drawable.msgunselected,
            R.drawable.contactsunselected,
            R.drawable.momentunselected,
            R.drawable.msgselected,
            R.drawable.contactsselected,
            R.drawable.momentselected
    };
}
