@startuml

title __APP's Class Diagram__\n

  namespace Activity {
    class Activity.AtyAdd {
    }
  }
  

  namespace Activity {
    class Activity.AtyChatRoom {
    }
  }
  

  namespace Activity {
    class Activity.AtyLoginOrRegister {
    }
  }
  

  namespace Activity {
    class Activity.AtyMain {
    }
  }
  

  namespace Activity {
    class Activity.AtyWelcome {
    }
  }
  

  namespace Adapter {
    class Adapter.AdapterAvatar {
    }
  }
  

  namespace Adapter {
    class Adapter.AdapterBackground {
    }
  }
  

  namespace Adapter {
    class Adapter.AdapterChatMsg {
    }
  }
  

  namespace Adapter {
    class Adapter.AdapterMainViewPager {
    }
  }
  

  namespace Adapter {
    class Adapter.AdapterMomentItem {
    }
  }
  

  namespace Adapter {
    class Adapter.AdapterUserItem {
    }
  }
  

  namespace Server {
    class Server.ReceiveChatMsg {
    }
  }
  

  namespace Server {
    class Server.ServerManager {
    }
  }
  

  namespace Util {
    class Util.ChatMsg {
    }
  }
  

  namespace Util {
    class Util.ImageManager {
    }
  }
  

  namespace Util {
    class Util.ImageMsg {
    }
  }
  

  namespace Util {
    class Util.LoginMsg {
    }
  }
  

  namespace Util {
    class Util.MomentMsg {
    }
  }
  

  namespace Util {
    class Util.RegisterMsg {
    }
  }
  

  namespace Util {
    class Util.UserItemMsg {
    }
  }
  

  namespace View {
    class View.LayoutChats {
    }
  }
  

  namespace View {
    class View.LayoutContacts {
    }
  }
  

  namespace View {
    class View.LayoutMoments {
    }
  }
  

  namespace View {
    class View.PicAndTextBtn {
    }
  }
  

  namespace View {
    class View.TitleBar {
    }
  }
  

  namespace com.example.gugu_client {
    class com.example.gugu_client.BuildConfig {
    }
  }
  

  Activity.AtyAdd -up-|> androidx.appcompat.app.AppCompatActivity
  Activity.AtyAdd o-- View.TitleBar : titleBar
  Activity.AtyChatRoom -up-|> androidx.appcompat.app.AppCompatActivity
  Activity.AtyChatRoom o-- View.TitleBar : titleBar
  Activity.AtyLoginOrRegister .up.|> android.view.View.OnClickListener
  Activity.AtyLoginOrRegister -up-|> androidx.appcompat.app.AppCompatActivity
  Activity.AtyLoginOrRegister o-- Server.ServerManager : serverManager
  Activity.AtyMain -up-|> androidx.appcompat.app.AppCompatActivity
  Activity.AtyMain o-- View.LayoutChats : chats
  Activity.AtyMain o-- View.LayoutContacts : contacts
  Activity.AtyMain o-- View.LayoutMoments : moments
  Activity.AtyMain o-- View.TitleBar : titleBar
  Activity.AtyWelcome -up-|> androidx.appcompat.app.AppCompatActivity
  Adapter.AdapterAvatar -up-|> androidx.recyclerview.widget.RecyclerView.Adapter
  Adapter.AdapterBackground -up-|> androidx.recyclerview.widget.RecyclerView.Adapter
  Adapter.AdapterChatMsg -up-|> android.widget.ArrayAdapter
  Adapter.AdapterMainViewPager -up-|> androidx.fragment.app.FragmentPagerAdapter
  Adapter.AdapterMomentItem -up-|> androidx.recyclerview.widget.RecyclerView.Adapter
  Adapter.AdapterUserItem -up-|> androidx.recyclerview.widget.RecyclerView.Adapter
  View.LayoutChats -up-|> androidx.fragment.app.Fragment
  View.LayoutChats o-- Adapter.AdapterUserItem : adapterUserItem
  View.LayoutContacts -up-|> androidx.fragment.app.Fragment
  View.LayoutContacts o-- View.PicAndTextBtn : patbBarContact
  View.LayoutContacts o-- View.PicAndTextBtn : patbBarGroup
  View.LayoutMoments -up-|> androidx.fragment.app.Fragment
  View.LayoutMoments o-- Adapter.AdapterMomentItem : adapterMomentItem
  View.PicAndTextBtn -up-|> android.widget.LinearLayout
  View.PicAndTextBtn o-- View.PicAndTextBtn.picAndTextBtnClickListener : listener
  View.TitleBar -up-|> android.widget.RelativeLayout
  View.TitleBar o-- View.TitleBar.titleBarClickListener : listener


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
